--- a/Resturant/style.css
+++ b/Resturant/style.css
@@ -36,7 +36,7 @@
     height: 50px;
 }
 #home{
-    background-image: url(/images/shutterstock_277750193.jpg);
+    background-image: url(shutterstock_277750193.jpg);
     background-size: 100% 100%;
     background-position: center center;
     height: 100vh;
