--- a/Resturant/style.css
+++ b/Resturant/style.css
@@ -36,7 +36,7 @@
     height: 50px;
 }
 #home{
-    background-image: url(shutterstock_277750193.jpg);
+    background-image: url(/Big-background.jpg);
     background-size: 100% 100%;
     background-position: center center;
     height: 100vh;
@@ -93,7 +93,7 @@
     line-height: 30px;
 }
 .back-g{
-    background-image: url(/images/bg.jpg);
+    background-image: url(bg.jpg);
     background-position: center center;
     background-size: 100% 100%;
     height: 500px;
