--- a/Resturant/style.css
+++ b/Resturant/style.css
@@ -36,7 +36,7 @@
     height: 50px;
 }
 #home{
-    background-image: url(Big-background.jpg);
+    background-image: url(bb.jpg);
     background-size: 100% 100%;
     background-position: center center;
     height: 100vh;
