--- a/task2/main.css
+++ b/task2/main.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/pexels-rachel-claire-4992803.jpg);
+    background-image: url(px.jpg);
     background-size:cover;
 }
 #text{
