--- a/Smart Login System/Css/style.css
+++ b/Smart Login System/Css/style.css
@@ -8,6 +8,7 @@ h1{
 @media screen and (max-width:600px) {
     .container{
         width: 75% !important;
+        margin: auto !important;
     }
 }
 .container,input{
